--- a/src/styles/layout/container.scss
+++ b/src/styles/layout/container.scss
@@ -14,6 +14,12 @@
     position: relative;
 }
 
+@media (min-width: 350px) {
+	.container-sm, .container {
+		max-width: 350px;
+		padding: 0;
+	}
+}
 @media (min-width: 576px) {
 	.container-sm, .container {
 		max-width: 540px;
