--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,12 +1,12 @@
-.btn-buy{
-    background-color: rgba(0,0,0,0);
+.btn-buy {
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 0;
     border: none;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-block;
     font-weight: bold;
-    margin: 16px auto;
+    margin: 15px auto;
     overflow: hidden;
     padding: 0;
     position: relative;
@@ -21,13 +21,14 @@
     margin-left: 16px;
 }
 
-.btn-buy::after{
+.btn-buy::after {
     border-width: 0 0 1px 1px;
     left: 0;
     margin-right: 16px;
 }
 
-.btn-buy::before, .btn-buy::after{
+.btn-buy::before,
+.btn-buy::after {
 
     background-color: #e62429;
     border-color: #e62429;
@@ -38,5 +39,5 @@
     content: "";
     display: block;
     height: 15px;
-    
+
 }
