--- a/src/components/Comics/Comics.scss
+++ b/src/components/Comics/Comics.scss
@@ -86,17 +86,17 @@
     overflow: hidden;
 }
 
-.module-header{
+.module-header {
     position: relative;
     margin-left: 0;
     // margin-top: 30px;
     // margin-bottom: 50px;
-    font: 800 26px/1 "RobotoCondensed","Trebuchet MS",Helvetica,Arial,sans-serif;
+    font: 800 26px/1 "RobotoCondensed", "Trebuchet MS", Helvetica, Arial, sans-serif;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 
-.module-header::before{
+.module-header::before {
     left: 53px;
     top: -5px;
     transform-origin: left bottom;
@@ -108,7 +108,8 @@
     transform: rotate(-45deg) skewX(45deg);
     width: 20px;
 }
-.module-header::after{
+
+.module-header::after {
     left: -6px;
     // top: calc(100%+3px);
     transform-origin: right top;
@@ -158,43 +159,47 @@
     float: left;
 }
 
-.swiper{
+.swiper {
     position: static;
 }
-.swiper-button-next{
+
+.swiper-button-next {
     right: 0;
 }
-.swiper-button-prev{
+
+.swiper-button-prev {
     left: 0;
 }
-.meta-title{
+
+.meta-title {
     text-decoration: none;
-    font: 700 14px/1.2 "Roboto Bold","Trebuchet MS",Helvetica,Arial,sans-serif;
+    font: 700 14px/1.2 "Roboto Bold", "Trebuchet MS", Helvetica, Arial, sans-serif;
     color: #000;
     margin-bottom: 0;
 }
 
-.row-item:hover .row-item-text h5, .row-item:hover .row-item-text .meta-title {
+.row-item:hover .row-item-text h5,
+.row-item:hover .row-item-text .meta-title {
     color: #e62429;
 }
 
 .row-item-text .meta-creators {
-    font: normal 11px/1.2 "Roboto","Trebuchet MS",Helvetica,Arial,sans-serif;
+    font: normal 11px/1.2 "Roboto", "Trebuchet MS", Helvetica, Arial, sans-serif;
     letter-spacing: 0;
 }
 
-.row-item-text{
+.row-item-text {
     height: 60px;
 }
 
-.price-item{
+.price-item {
     padding: 10px 0;
     display: flex;
     align-items: center;
 }
 
 
-.innerFill{
+.innerFill {
     padding: 0 20px;
     color: #fff;
     background-color: #e62429;
@@ -202,11 +207,12 @@
     text-align: center;
     line-height: 15px;
     text-transform: uppercase;
-    
+
 }
 
-.innerFill::before, .innerFill::after{
-    border-color: #e62429 rgba(0,0,0,0);
+.innerFill::before,
+.innerFill::after {
+    border-color: #e62429 rgba(0, 0, 0, 0);
     transition: none;
     border-style: solid;
     border-width: 0 0 16px 16px;
@@ -216,12 +222,12 @@
     position: absolute;
 }
 
-.innerFill::before{
+.innerFill::before {
     left: 0;
     top: 0;
 }
 
-.innerFill::after{
+.innerFill::after {
     bottom: 0;
     right: 0;
     transform: rotate(180deg);
