--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,45 +1,67 @@
-@import url('./layout/container.scss');
+@import url("./layout/container.scss");
 
-:root{
-	--swiper-theme-color: #ed3034;
+:root {
+  --swiper-theme-color: #ed3034;
 }
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
 #root {
-	display: flex;
-	flex-direction: column;
-	flex: 1 1 auto;
-	height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  height: 100%;
 }
 
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-	monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-
 .page__wrapper {
-	display: flex;
-	flex-direction: column;
-	flex: 1 1 auto;
-	
-	.main {
-		display: flex;
-		flex-direction: column;
-		flex: 1 1 auto;
-		padding-top: 50px;
-		box-sizing: border-box;
-	}
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    padding-top: 50px;
+    box-sizing: border-box;
+  }
+}
+input[_size_medium] {
+	height: 40px;
+}
+
+input {
+  background-color: #fff;
+  box-sizing: border-box;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+input,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  border: 1px solid #d2d2d2;
+  border-radius: 8px;
+  font-size: 16px;
+  outline: none;
+  transition: border 0.2s ease-in-out;
 }
